Fix column wrapping in signup section

--- a/wp-content/themes/livecomplete/style.css
+++ b/wp-content/themes/livecomplete/style.css
@@ -322,7 +322,7 @@ ul.flat-support li:first-child:after {
   width: 100%;
 }
 #static_header_banner.header-style-1 {
-  height: 50vh;
+  height: 663px;
 }
 
 #static_header_banner h1 {
